using Yarnique.Common.Domain;

namespace Yarnique.Modules.Designs.Domain.Designs.DesignParts
{
    public class DesignPartId : TypedIdValueBase
    {
        public DesignPartId(Guid value) : base(value)
        {
        }
    }
}
