using Yarnique.Common.Domain;

namespace Yarnique.Modules.OrderSubmitting.Domain.Designs
{
    public class DesignId : TypedIdValueBase
    {
        public DesignId(Guid value) : base(value)
        {
        }
    }
}
